<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >
<include layout="@layout/title"/>
    <Button
        android:id="@+id/buttonBluetoothOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        style="@style/FontStyle"
        android:text="@string/bluetooth_option" />

    <Button
        android:id="@+id/buttonSerialOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonBluetoothOption"
        android:layout_marginTop="10dp"
        style="@style/FontStyle"
        android:layout_centerVertical="true"
        android:text="@string/serial_option" />
        <Button
        android:id="@+id/buttonWifiOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSerialOption"
        android:layout_marginTop="10dp"
        style="@style/FontStyle"
        android:layout_centerVertical="true"
        android:text="@string/wifi_option" />
        <Button
        android:id="@+id/buttonUSBOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonWifiOption"
        android:layout_marginTop="10dp"
        style="@style/FontStyle"
        android:layout_centerVertical="true"
        android:text="@string/ust_option" />
        <Button
        android:id="@+id/buttonAudioOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonUSBOption"
        android:layout_marginTop="10dp"
        style="@style/FontStyle"
        android:layout_centerVertical="true"
        android:text="@string/audio_option" />
    <Button
        android:id="@+id/button_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/FontStyle"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/buttonAudioOption"
        android:text="@string/help" />
    <Button
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_help"
        android:layout_centerHorizontal="true"
        style="@style/FontStyle"
        android:layout_marginTop="10dp"
        android:text="@string/exit" />

</RelativeLayout>
