<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >
	<include layout="@layout/title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <CheckBox
            android:id="@+id/checkBox_write_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_tag" />

        <Button
            android:id="@+id/button_write_read_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontStyle"
            android:text="@string/tag" />

        <EditText
            android:id="@+id/editText_write_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontStyle"
            android:text="@string/menbank" />

        <Spinner
            android:id="@+id/spinner_menbank_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontStyle"
            android:text="@string/access_password" />

        <EditText
            android:id="@+id/editText_write_read_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="00000000"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/FontStyle"
            android:text="@string/addr" />

        <EditText
            android:id="@+id/editText_write_read_addr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:ems="4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/FontStyle"
            android:text="@string/len" />

        <EditText
            android:id="@+id/editText_write_read_len"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontStyle"
            android:text="@string/write_data" />

        <EditText
            android:id="@+id/editText_write_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="请输入十六进制数据"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/button_write_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_data" />

</LinearLayout>
