<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearlayout00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <include layout="@layout/title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout00"
        android:orientation="horizontal" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/receive_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout0"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontStyle"
            android:text="@string/tag_count" />

        <EditText
            android:id="@+id/editText_tag_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:ems="5" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>

    <ListView
        android:id="@+id/listView_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_below="@+id/receive_txt"
        android:divider="#0a0f0b"
        android:dividerHeight="1dp" >
    </ListView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true" >
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	            <Button
            android:id="@+id/button_start_read"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inventory" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_data" />
	</LinearLayout>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">
            <Button
            android:id="@+id/button_para_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/para_setting" />
            <Button
            android:id="@+id/button_lock_kill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lock_kill" />
        <Button
            android:id="@+id/button_more_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/read_write" />
</LinearLayout>

    </LinearLayout>

</RelativeLayout>