<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/FontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/com_id" />

            <Spinner
                android:id="@+id/spinner_com_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/FontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baudrate" />

            <Spinner
                android:id="@+id/spinner_baudrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/FontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/com_id" />

            <EditText
                android:id="@+id/editText_com_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/FontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected_flag" />

            <EditText
                android:id="@+id/editText_connected_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:text="@string/disconnect" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/FontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output_power" />

            <EditText
                android:id="@+id/editText_output_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/FontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_freq" />

            <EditText
                android:id="@+id/editText_work_freq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false" />
        </LinearLayout>

        <Button
            android:id="@+id/button_connect"
            style="@style/FontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_device" />
    </LinearLayout>

    <Button
        android:id="@+id/button_into_option_reader"
        android:textSize="20sp"
        android:textColor="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/into_reader" />

</LinearLayout>